@@ -13,6 +13,12 @@ Core and Builtins
 Library
 -------
 
+Tools/Demos
+-----------
+
+- Issue #28102: The zipfile module CLI now prints usage to stderr.
+  Patch by Stephen J. Turnbull.
+
 
 What's New in Python 3.6.0 beta 1
 =================================
